--- a/css/mixin.css
+++ b/css/mixin.css
@@ -2,12 +2,12 @@
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
