--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,26 +13,21 @@ $gray1: #9ea0a4;
 
 /*=================톤앤매너(스킬)=================*/
 $html: #e54d26;
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 
 //웹페이지(고보협)
 $kopc: #e7a335;
-$kopc_f1: invert(63%) sepia(83%) saturate(371%) hue-rotate(356deg) brightness(92%) contrast(97%);
-$kopc_f2: invert(17%) sepia(10%) saturate(0%) hue-rotate(235deg) brightness(103%) contrast(94%);
-$kopc_f3: invert(100%) sepia(100%) saturate(0%) hue-rotate(336deg) brightness(101%) contrast(101%);
+$kopc_t1: #e7a335;
+$kopc_t2: #333333;
+$kopc_t3: #ffffff;
 
 $FAHotel: #c3dded;
-$FAHotel_f1: invert(100%) sepia(62%) saturate(637%) hue-rotate(304deg) brightness(108%) contrast(99%);
-$FAHotel_f2: invert(16%) sepia(38%) saturate(744%) hue-rotate(354deg) brightness(97%) contrast(95%);
-$FAHotel_f3: invert(9%) sepia(94%) saturate(5860%) hue-rotate(359deg) brightness(87%) contrast(110%);
-$FAHotel_f4: invert(5%) sepia(44%) saturate(7221%) hue-rotate(231deg) brightness(155%) contrast(112%);
-$FAHotel_f5: invert(27%) sepia(84%) saturate(2118%) hue-rotate(39deg) brightness(101%) contrast(101%);
+$FAHotel_t1: #fefdf0;
+$FAHotel_t2: #422d13;
 
 $kidcat: $identity;
-$kidcat_f1: invert(64%) sepia(55%) saturate(640%) hue-rotate(299deg) brightness(96%) contrast(89%);
-$kidcat_f2: invert(64%) sepia(55%) saturate(640%) hue-rotate(299deg) brightness(96%) contrast(89%);
-$kidcat_f3: invert(64%) sepia(55%) saturate(640%) hue-rotate(299deg) brightness(96%) contrast(89%);
-
+$kidcat_t1: $identity;
+$kidcat_t2: $background;
 
 //웹페이지(페어몬트)
 
