--- a/css/footer.css
+++ b/css/footer.css
@@ -2,49 +2,49 @@
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 * {
@@ -103,7 +103,6 @@ body {
 @media screen and (min-width: 320px) {
   .bighead {
     display: block;
-    overflow: hidden;
   }
 }
 
