--- a/css/animation.css
+++ b/css/animation.css
@@ -2,7 +2,7 @@
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 @keyframes header_logo {
