--- a/css/javascript.css
+++ b/css/javascript.css
@@ -2,25 +2,25 @@
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 .no {
