--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,6 +2,6 @@
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
 /*=================톤앤매너(스킬)=================*/
-/*=================svg 필터=================*/
+/*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
